fix query sorting, row matching